Responsive Design(Fix): Fixed text alignment in sidemenu bar

--- a/Tutangle Responsive/styles/layout.css
+++ b/Tutangle Responsive/styles/layout.css
@@ -31,6 +31,7 @@ nav {
 .rightmenubar {
   width: 100%;
   background-color: #f5f5f5;
+  text-align: center;
 }
 
 footer {
