--- a/Tutangle Responsive/styles/responsive.css
+++ b/Tutangle Responsive/styles/responsive.css
@@ -8,9 +8,6 @@
   .navRightContent li:last-child {
     margin: 0 14px 0 0;
   }
-  .rightmenubar {
-    text-align: center;
-  }
 }
 @media only screen and (min-width: 600px) {
   .footerCopyright {
